[package]
name = "asset_manager_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_manager_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.22"  # Ensure this matches the required version
spl-token = "4.0.0"  # Ensure this is compatible with your Solana version
spl-associated-token-account = "2.0.0"  # Adjust as needed
